# Split

./: .env.example  .gitignore  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINING.md  README.md  SECURITY.md  commitlint.config.js  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json
.changeset/: README.md  config.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  deploy-contracts.yml  release.yml  security.yml  stale.yml
contracts/: Cargo.toml
contracts/group-escrow/: Cargo.toml
contracts/group-escrow/src/: lib.rs
docs/adr/: 0001-monorepo-with-pnpm.md  0002-changesets-for-versioning.md
scripts/: setup-dev.sh
